--- a/index.html
+++ b/index.html
@@ -68,11 +68,39 @@
                 </ul>
         </section>
             <hr>
+
         <section>
             <!-- ol info utili -->
             <h3>Info utili</h3>
+                <ol>
+                    <li>
+                        <p>Numeri utili di emergenza</p>
+                            <ul>
+                              <li><strong>999</strong> - Emergenza</li> 
+                              <li><strong>101</strong> - Numero polizia</li> 
+                              <li><strong>999</strong> - Numero assistenza medica</li>  
+                            </ul>
+                    </li>
+
+                    <li>
+                        <p>Hotel</p>
+                        <ul>
+                            <li><strong>Nome hotel:</strong> Buckingham Palace</li> 
+                            <li><strong>Indirizzo hotel</strong> Westminister, London SW1A 1AA, Regno Unito</li> 
+                          </ul>
+                    </li>
+
+                    <li>
+                        <p>Aereo</p>
+                        <ul>
+                            <li><strong>Volo di Andata:</strong> - Y1234X, ore 9.30 da Milano MAlpensa</li> 
+                            <li><strong>Volo di Ritorno</strong> - Y1236X, ore 18.30 da London Heathrow</li> 
+                          </ul>
+                    </li>
+                </ol>
         </section>
             <hr>
+
         <section>
             <!-- foto -->
             <h3>Le foto</h3>
