--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Guida visita a Londra</title>
 </head>
 <body>
-    <Header>
+    <header>
         <!-- titolo + 3immagini -->
         <h1>Il mio Viaggio a Londra</h1>
         <img src="https://i.imgur.com/EkswbQc.jpg" alt="London Eye illuminato di notte visto dal fiume">
@@ -15,7 +15,7 @@
         <img src="https://i.imgur.com/s2I98tK.jpg" alt="Big Ben illuminato di notte visto dal fiume">
 
         <hr>
-    </Header> 
+    </header> 
         
     <main>
         <section>
