--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <!-- titolo + 3immagini -->
+        <!-- titolo + 3 immagini -->
         <h1>Il mio Viaggio a Londra</h1>
         <img src="https://i.imgur.com/EkswbQc.jpg" alt="London Eye illuminato di notte visto dal fiume">
         <img src="https://i.imgur.com/JJF9XXD.jpg" alt="Skyline illuminata di notte vista dal fiume">
@@ -47,11 +47,11 @@
                         <td>Biglietto Aereo</td>
                         <td>120 &#8364;</td>
                     </tr>
-                    <tr>
+                    <tfoot>
                         <td>Totale</td>
                         <td></td>
                         <td>360 &#8364;</td>
-                    </tr>
+                    </tfoot>
                 </tbody>
             </table>
         </section>
@@ -74,7 +74,7 @@
             <h3>Info utili</h3>
                 <ol>
                     <li>
-                        <p>Numeri utili di emergenza</p>
+                        Numeri utili di emergenza
                             <ul>
                               <li><strong>999</strong> - Emergenza</li> 
                               <li><strong>101</strong> - Numero polizia</li> 
@@ -83,18 +83,18 @@
                     </li>
 
                     <li>
-                        <p>Hotel</p>
+                        Hotel
                         <ul>
                             <li><strong>Nome hotel:</strong> Buckingham Palace</li> 
-                            <li><strong>Indirizzo hotel</strong> Westminister, London SW1A 1AA, Regno Unito</li> 
+                            <li><strong>Indirizzo hotel:</strong> Westminister, London SW1A 1AA, Regno Unito</li> 
                           </ul>
                     </li>
 
                     <li>
-                        <p>Aereo</p>
+                        Aereo
                         <ul>
-                            <li><strong>Volo di Andata:</strong> - Y1234X, ore 9.30 da Milano MAlpensa</li> 
-                            <li><strong>Volo di Ritorno</strong> - Y1236X, ore 18.30 da London Heathrow</li> 
+                            <li><strong>Volo di Andata:</strong> - Y1234X, ore 9.30 da Milano Malpensa</li> 
+                            <li><strong>Volo di Ritorno:</strong> - Y1236X, ore 18.30 da London Heathrow</li> 
                           </ul>
                     </li>
                 </ol>
